Implement verified email Google auth and recovery
